--- a/conf/application.conf
+++ b/conf/application.conf
@@ -139,6 +139,8 @@ urls {
 
   trustsHelpline = "https://www.gov.uk/government/organisations/hm-revenue-customs/contact/trusts"
   welshHelpline = "https://www.gov.uk/government/organisations/hm-revenue-customs/contact/welsh-language-helplines"
+
+  registerTrustAsTrustee = "https://www.gov.uk/guidance/register-a-trust-as-a-trustee"
 }
 
 minimumDate {
