--- a/conf/application.conf
+++ b/conf/application.conf
@@ -127,12 +127,13 @@ timeout{
   countdown = 120
 }
 
+accessibility-statement.service-path = "/trusts"
+
 urls {
   login = "http://localhost:9949/auth-login-stub/gg-sign-in"
   loginContinue = "http://localhost:9781/trusts-registration"
   logout = "http://localhost:9514/feedback/trusts"
   maintainATrust = "http://localhost:9788/maintain-a-trust"
-  accessibility = "http://localhost:9781/trusts-registration/accessibility"
   createAgentServicesAccount = "http://localhost:9788/create-agent-services-account"
   registrationProgress = "http://localhost:9781/trusts-registration/:draftId/registration-progress"
   registrationStart = "http://localhost:9781/trusts-registration"
