--- a/conf/application.conf
+++ b/conf/application.conf
@@ -18,7 +18,7 @@ appName="register-trust-asset-frontend"
 
 play.http.router=prod.Routes
 
-play.filters.headers.contentSecurityPolicy= "default-src 'self' 'unsafe-inline' localhost:9853 localhost:9032 localhost:9250 localhost:12345 www.google-analytics.com www.googletagmanager.com  tagmanager.google.com 'self' data: ssl.gstatic.com www.gstatic.com fonts.gstatic.com fonts.googleapis.com;"
+play.filters.headers.contentSecurityPolicy= "default-src 'self' 'unsafe-inline' localhost:9853 localhost:9032 localhost:9250 localhost:12345 www.google-analytics.com www.googletagmanager.com  tagmanager.google.com 'self' data: ssl.gstatic.com www.gstatic.com fonts.gstatic.com fonts.googleapis.com code.jquery.com object-src 'none';"
 
 play.http.requestHandler = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
 play.http.errorHandler = "handlers.ErrorHandler"
@@ -107,14 +107,11 @@ tracking-consent-frontend {
   gtm.container = "a"
 }
 
-assets {
-  version = "3.11.0"
-  version = ${?ASSETS_FRONTEND_VERSION}
-  url     = "http://localhost:9032/assets/"
-}
+contact-frontend.serviceId = "trusts"
 
-contact-frontend {
-  host = "http://localhost:9250"
+google-analytics {
+  token = N/A
+  host  = auto
 }
 
 mongodb {
