--- a/test/resources/test.application.conf
+++ b/test/resources/test.application.conf
@@ -18,7 +18,7 @@ play.filters.disabled += "play.filters.csrf.CSRFFilter"
 play.filters.disabled += "play.filters.csp.CSPFilter"
 
 mongo-async-driver {
-  akka {
+  org.apache.pekko {
     log-dead-letters-during-shutdown = off
     log-dead-letters = 0
   }
