--- a/conf/application.conf
+++ b/conf/application.conf
@@ -114,3 +114,5 @@ assetValueLowerLimitExclusive = 0
 play-frontend-hmrc {
    useRebrand = true
 }
+
+play-frontend-hmrc.forceServiceNavigation = true
